--- a/WebSite/Web/Styles/animal-list.less
+++ b/WebSite/Web/Styles/animal-list.less
@@ -3,104 +3,215 @@
 @background-color: #f4f2f1;
 @navbar-height: 50px;
 @footer-height: 50px;
-@options-panel-height: 40px;
+@filter-width: 250px;
 
-#options-panel {
-    width:50%;
-    height: @options-panel-height;
-    line-height: @options-panel-height;
-    background-color: @background-color;
-    padding-right: 10px;
 
-    span {
-        margin: 10px;
-        text-transform: uppercase;
+
+label.checkbox {
+    padding-left: 20px;
+    position: relative;
+    font-weight: normal;
+
+    .checkbox-icon {
+        position: absolute;
+        display: inline-block;
+        width: 15px;
+        height: 15px;
+        left: 0;
+        top: 3px;
+        border: 1px solid gray;
+        background-color: white;
+        border-radius: 2px;
     }
 
-    .sort-dropdown {
-        font-style: italic;
-        float: right;
+    input:checked + .checkbox-icon:after {
+        /*content: "\f00c"; 
+        content: "\f096"; //fa-square-o fa-check-square-o
+        font-family: FontAwesome;*/
+        content: "✔";
+        width: 14px;
+        height: 14px;
+        position: absolute;
+        left: 0;
+        top: 0;
+        margin-left: -1px;
+        margin-top: -4px;
+        color: @green-color;
+    }
+
+    input {
+        display: none;
     }
 }
 
 #filter-form {
     position: fixed;
-    top: @navbar-height + @options-panel-height;
+    left: 0;
+    top: @navbar-height;
+    bottom: @footer-height;
+    width: @filter-width;
+    overflow-y: scroll;
+    overflow-x: hidden;
     background-color: @background-color;
-    padding: 10px;
-    width: 250px;
 
-    .half-align {
+    .form-header {
+        padding-top: 15px;
+        padding-bottom: 10px;
         text-align: center;
-        display: inline-block; // maybe display table-cell
-        width: 50%;
+        text-transform: uppercase;
     }
+
     .search-type {
-        margin: 10px;
-        margin-top: -10px;
-    }
-    .animal-type {
-        margin: 10px;
-    }
-    .form-group {
-        .dropdown-toggle {
-            width: 100%;
-        }
-        .dropdown-menu {
-            width: 230px;
-        }
-    }
-    .checkbox {
-        //margin-left: 10px;
-    }
-    .result-count {
-        background-color: @green-color;
         text-align: center;
         padding: 2px;
+
+        .button {
+            display: inline-block;
+            padding: 3px;
+            border: 1px solid lightgray;
+            border-radius: 3px;
+            background-color: transparent;
+            color: black;
+            //font-size: 13px;
+            width: 100px;
+            margin: 0 2px;
+
+            &.active {
+                background-color: @green-color;
+                border-color: @green-color;
+            }
+        }
+    }
+
+    .animal-type {
+        text-align: center;
+        padding: 10px;
+
+        i {
+            margin: 0 10px;
+        }
+    }
+
+    .sex-type, .size-type, .color-type, .breed-type, .found-time {
+        .header {
+            border-top: 1px solid lightgray;
+            padding: 10px;
+            text-transform: uppercase;
+            //background-color: @background-color;
+
+            &:after {
+                content: "+";
+                float: right;
+            }
+
+            &.active:after {
+                content: "–"
+            }
+        }
+
+        .options {
+            border-top: 1px solid lightgray;
+            background-color: white;
+            padding: 10px;
+            //font-size: small;
+        }
+    }
+
+    .sex-type, .size-type {
+        text-align: center;
+
+        i {
+            display: inline-block;
+            margin: 0 5px;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: @background-color;
+
+            &.active {
+                background-color: @green-color;
+            }
+        }
+    }
+
+    .additional-options {
+        border-top: 1px solid lightgray;
+        padding: 10px;
+    }
+
+    .breed-type {
+        .search {
+            border-top: 1px solid lightgray;
+            padding: 5px 10px;
+            //background-color: white;
+            
+            input {
+                border: none;
+                background-color: transparent;
+                outline: none;
+            }
+
+            .search-icon {
+                float: right;
+            }
+        }
+    }
+
+    //hide
+    .sex-type, .size-type, .color-type {
+        display: none;
+    }
+
+    .result-count {
+        background-color: @green-color;
+        border-radius: 3px;
+        text-align: center;
+        padding: 3px;
+        margin: 2px;
     }
 }
 
-#animals-photos {
-    position:fixed;
-    top: @navbar-height + @options-panel-height;
+.results-container {
+    position: fixed;
+    left: @filter-width;
+    top: @navbar-height;
     bottom: @footer-height;
-    right: auto;
+    right: 0;
+}
+
+#animals-list {
+    position:absolute;
     left: 0;
+    top: 0;
+    bottom: 0;
     width: 50%;
     overflow-y: scroll;
     overflow-x: hidden;
     background-color: @background-color;
+    padding: 5px;
     
-    ul {
-        margin: 0;
+    .animal-preview {
+        display: block;
+        float: left;
         padding: 5px;
-        margin-top: -10px; // remove top padding
+        width: 20%;
+        opacity: 0.85;
 
-        li {
-            list-style: none;
-            float: left;
-            padding: 5px;
-            width: 20%;
-            opacity: 0.85;
+        &:hover {
+            opacity: 1;
+        }
 
-            &:hover {
-                opacity: 1;
-            }
-
-            img {
-                width: 100%;
-                height: auto;
-            }
+        img {
+            width: 100%;
+            height: auto;
         }
     }
 }
 
 #search-map {
-    position:fixed;
-    top: @navbar-height;
-    bottom: @footer-height;
+    position:absolute;
+    top: 0;
+    bottom: 0;
     right: 0;
-    left: auto;
     width: 50%;
 }
 
@@ -110,3 +221,11 @@ footer {
     left: 0;
     right:0;
 }
+
+// adaptive preview size
+@media (max-width:  700px) { #animals-list .animal-preview { width: 100%/2; } }
+@media (min-width:  700px) { #animals-list .animal-preview { width: 100%/3; } }
+@media (min-width: 1000px) { #animals-list .animal-preview { width: 100%/4; } }
+@media (min-width: 1300px) { #animals-list .animal-preview { width: 100%/5; } }
+@media (min-width: 1600px) { #animals-list .animal-preview { width: 100%/6; } }
+@media (min-width: 1900px) { #animals-list .animal-preview { width: 100%/7; } }
