--- a/WebSite/Web/Views/Shared/_Layout.cshtml
+++ b/WebSite/Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Дай лапу</title>
-    <link href="~/Styles/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    @*<link href="~/Styles/lib/normalize.css" rel="stylesheet" type="text/css" />*@
+    <link href="~/Styles/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" /> @*выпилить нахуй*@
     <link href="~/Styles/shared/_layout.css" rel="stylesheet" type="text/css" />
     @RenderSection("Styles", false)
 </head>
@@ -23,7 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="@Url.Action("List", "Animal")" class="database-button">Доска объявлений</a></li>
-                    <li><a href="@Url.Action("Add", "Animal")" class="found-button active">Найден</a></li>
+                    <li><a href="@Url.Action("Add", "Animal")" class="found-button">Найден</a></li>
                     <li><a href="@Url.Action("Add", "Animal")" class="lost-button">Пропал</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -42,23 +43,21 @@
     <footer>
         <div class="container">
             <div class="copyright-text">Copyright &copy; @DateTime.Now.Year - Дай лапу</div>
-            <div class="right-align">
-                <div class="social-icons">
-                    Рассказать друзьям:
-                    <i class="twitter-icon"></i>
-                    <i class="facebook-icon"></i>
-                    <i class="vkontakte-icon"></i>
-                    <i class="odnoklassniki-icon"></i>
-                    <i class="google-plus-icon"></i>
-                    <i class="mail-ru-icon"></i>
-                </div>
-                <div class="language">Язык: <u>Ru</u></div>
+            <div class="social-icons">
+                <i class="twitter-icon"></i>
+                <i class="facebook-icon"></i>
+                <i class="vkontakte-icon"></i>
+                <i class="odnoklassniki-icon"></i>
+                <i class="google-plus-icon"></i>
+                <i class="mail-ru-icon"></i>
             </div>
+            <div class="language">Язык: <u>Ru</u></div>
         </div>
     </footer>
 
     <script src="~/Scripts/lib/jquery-2.2.0.min.js"></script>
     <script src="~/Scripts/lib/bootstrap.min.js"></script>
+    <script src="~/Scripts/lib/knockout-3.4.0.js"></script>
     @RenderSection("Scripts", false)
 </body>
 </html>
