--- a/WebSite/Web/Views/Animal/Add.cshtml
+++ b/WebSite/Web/Views/Animal/Add.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Добавление";
 }
 
@@ -9,7 +8,7 @@
 
 @section Scripts {
     <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=Xc91SP-rHaQMdt5vAtjj_5Vq-AeAT7HR&lang=ru_RU&id=add-map"></script>
-    <script></script>
+    <script src="~/Scripts/animal-add.js"></script>
 }
 
 <div id="add-map">
