--- a/WebSite/Web/Views/Shared/_Layout.cshtml
+++ b/WebSite/Web/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="@Url.Action("List", "Animal")" class="database-button">Доска объявлений</a></li>
-                    <li><a href="@Url.Action("Add", "Animal")" class="found-button">Найден</a></li>
-                    <li><a href="@Url.Action("Add", "Animal")" class="lost-button">Пропал</a></li>
+                    <li><a href="@Url.Action("List", "Animal")" class="database-button js-menu-database">Доска объявлений</a></li>
+                    <li><a href="@Url.Action("Add", "Animal")" class="found-button js-menu-found">Найден</a></li>
+                    <li><a href="@Url.Action("Add", "Animal")" class="lost-button js-menu-lost">Пропал</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="paw-icon"></i>О нас</a></li>
