--- a/WebSite/Web/Styles/shared/_layout.less
+++ b/WebSite/Web/Styles/shared/_layout.less
@@ -1,5 +1,6 @@
 ﻿@import "icons.less";
 @import "fonts.less";
+@import "controls.less";
 
 @gray-color: #f4f2f1;
 @green-color: #98d603;
@@ -13,6 +14,12 @@ html {
 
 body {
     padding-top: 50px; // отступ от фиксированного навбара
+}
+
+ul, li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 #navbar {
