--- a/WebSite/Web/Views/Shared/_Layout.cshtml
+++ b/WebSite/Web/Views/Shared/_Layout.cshtml
@@ -58,6 +58,8 @@
     <script src="~/Scripts/lib/jquery-2.2.0.min.js"></script>
     <script src="~/Scripts/lib/bootstrap.min.js"></script>
     <script src="~/Scripts/lib/knockout-3.4.0.js"></script>
+    <script src="~/Scripts/shared/_layout.js"></script>
+    <script src="~/Scripts/shared/controls.js"></script>
     @RenderSection("Scripts", false)
 </body>
 </html>
