--- a/WebSite/Web/Styles/shared/icons.less
+++ b/WebSite/Web/Styles/shared/icons.less
@@ -1,28 +1,136 @@
 ﻿.mixin-icon {
     display: inline-block;
-    vertical-align: middle
+    vertical-align: middle;
+    margin: 0; // all margins and paddings should be customized on page styles
+    padding: 0;
+    background-size: contain; // fit icon to specified width/height (for svg)
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+}
+.mixin-filter-icon {
+    width: 55px;
+    height: 45px;
 }
 
-.cat-gray-icon {
-    background: url("/Content/icons/form-cat-gray.png");
-}
-
-.feedback-icon {
+// filter icons
+.dog-icon {
     .mixin-icon;
-    background: url("/Content/icons/nav-feedback.png");
-    width: 17px;
-    height: 13px;
-    margin-right: 8px;
+    .mixin-filter-icon;
+    
+    &.white { background-image: url("/Content/svg-icons/dog-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/dog-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/dog-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/dog-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/dog-blue.svg"); }
+}
+.cat-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/cat-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/cat-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/cat-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/cat-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/cat-blue.svg"); }
+}
+.male-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/sex-male-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/sex-male-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/sex-male-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/sex-male-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/sex-male-blue.svg"); }
+}
+.female-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/sex-female-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/sex-female-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/sex-female-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/sex-female-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/sex-female-blue.svg"); }
 }
 
+.s-size-dog-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/size-small-dog-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/size-small-dog-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/size-small-dog-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/size-small-dog-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/size-small-dog-blue.svg"); }
+}
+.m-size-dog-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/size-medium-dog-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/size-medium-dog-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/size-medium-dog-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/size-medium-dog-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/size-medium-dog-blue.svg"); }
+}
+.l-size-dog-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/size-large-dog-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/size-large-dog-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/size-large-dog-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/size-large-dog-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/size-large-dog-blue.svg"); }
+}
+.s-size-cat-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/size-small-cat-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/size-small-cat-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/size-small-cat-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/size-small-cat-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/size-small-cat-blue.svg"); }
+}
+.l-size-cat-icon {
+    .mixin-icon;
+    .mixin-filter-icon;
+
+    &.white { background-image: url("/Content/svg-icons/size-large-cat-white.svg"); }
+    &.gray, & { background-image: url("/Content/svg-icons/size-large-cat-gray.svg"); }
+    &.black, .js-black .js-active& { background-image: url("/Content/svg-icons/size-large-cat-black.svg"); }
+    &.green, .js-green .js-active& { background-image: url("/Content/svg-icons/size-large-cat-green.svg"); }
+    &.blue,  .js-blue  .js-active& { background-image: url("/Content/svg-icons/size-large-cat-blue.svg"); }
+}
+
+.options-icon {
+    .mixin-icon;
+    background: url("/Content/icons/options.png");
+    width: 19px;
+    height: 16px;
+
+    cursor: pointer;
+}
+
+// navbar icons - png looks better than svg on small resolutions
 .paw-icon {
     .mixin-icon;
-    background: url("/Content/icons/nav-paw.png");
+    background: url("/Content/icons/nav-paw.png") no-repeat top left;
     width: 19px;
     height: 18px;
     margin-right: 8px;
 }
-
+.feedback-icon {
+    .mixin-icon;
+    background: url("/Content/icons/nav-feedback.png");
+    background-size: contain;
+    width: 17px;
+    height: 13px;
+    margin-right: 8px;
+}
 .profile-icon {
     .mixin-icon;
     background: url("/Content/icons/nav-profile.png");
@@ -31,7 +139,7 @@
     margin-right: 8px;
 }
 
-
+// footer social - png
 .twitter-icon {
     .mixin-icon;
     background: url("/Content/icons/social-twitter.png");
@@ -67,35 +175,4 @@
     background: url("/Content/icons/social-mail-ru.png");
     width: 26px;
     height: 26px;
-}
-
-.options-icon {
-    .mixin-icon;
-    background: url("/Content/icons/options.png");
-    width: 19px;
-    height: 16px;
-
-    cursor: pointer;
-}
-
-.dog-icon {
-    .mixin-icon;
-    background: url("/Content/icons/form-dog-gray.png");
-    width: 37px;
-    height: 34px;
-
-    &.active {
-        background: url("/Content/icons/form-dog-green.png");
-    }
-}
-
-.cat-icon {
-    .mixin-icon;
-    background: url("/Content/icons/form-cat-gray.png");
-    width: 33px;
-    height: 31px;
-
-    &.active {
-        background: url("/Content/icons/form-cat-green.png");
-    }
 }
