--- a/WebSite/Web/Views/Animal/List.cshtml
+++ b/WebSite/Web/Views/Animal/List.cshtml
@@ -11,112 +11,106 @@
     <script src="~/Scripts/animal-list.js"></script>
 }
 
-<div id="filter-form">
+<div id="filter-form" data-bind="css: formColor">
     <div class="form-header">Доска объявлений</div>
+
     <div class="search-type">
-        @*<label class="checkbox">*@
-            <div class="button active">Найден</div>
-            <div class="button">Пропал</div>
-        @*</label>*@
+        <div class="button" data-bind="active: { state: searchType, value: 'found' }">Найден</div>
+        <div class="button" data-bind="active: { state: searchType, value: 'lost' }">Пропал</div>
     </div>
     <div class="animal-type">
-        <i class="dog-icon"></i>
-        <i class="cat-icon active"></i>
+        <i class="dog-icon" data-bind="active: { state: animalType, value: 'dog' }"></i>
+        <i class="cat-icon" data-bind="active: { state: animalType, value: 'cat' }"></i>
     </div>
-    <div class="sex-type">
-        <div class="header js-accordion">Пол</div>
-        <div class="options js-item">
-            <i class="male-icon">М</i>
-            <i class="female-icon">Ж</i>
-            @*<i class="unknown-icon"></i>*@
+
+    <div class="sex-type js-accordion">
+        <div class="header js-header">Пол</div>
+        <div class="options js-body">
+            <i class="male-icon" data-bind="active: { state: sexTypes, value: 'male' }"></i>
+            <i class="female-icon" data-bind="active: { state: sexTypes, value: 'female' }"></i>
         </div>
     </div>
-    <div class="size-type">
-        <div class="header js-accordion">Размер</div>
-        <div class="options js-item">
-            <i class="s-size-icon">S</i>
-            <i class="m-size-icon">M</i>
-            <i class="l-size-icon">L</i>
+    <div class="size-type js-accordion">
+        <div class="header js-header">Размер</div>
+        <div class="options js-body">
+            <div data-bind="visible: animalType() == 'dog'">
+                <i class="s-size-dog-icon" data-bind="active: { state: sizeTypes, value: 'small' }"></i>
+                <i class="m-size-dog-icon" data-bind="active: { state: sizeTypes, value: 'medium' }"></i>
+                <i class="l-size-dog-icon" data-bind="active: { state: sizeTypes, value: 'large' }"></i>
+            </div>
+            <div data-bind="visible: animalType() != 'dog'">
+                <i class="s-size-cat-icon" data-bind="active: { state: sizeTypes, value: 'small' }"></i>
+                <i class="l-size-cat-icon" data-bind="active: { state: sizeTypes, value: 'large' }"></i>
+            </div>
         </div>
     </div>
-    <div class="color-type">
-        <div class="header js-accordion">Окрас</div>
-        <div class="options js-item">
-            @foreach (var color in new List<string> { "бе", "чер", "красный", "син" })
-            {
-            <label class="checkbox">
-                <input type="checkbox" />
-                <i class="checkbox-icon"></i>
-                @(string.Format("{0} {0} {0} {0} {0}", color))
-            </label>
-            }
+
+    <div class="color-type js-accordion">
+        <div class="header js-header">Окрас</div>
+        <div class="options js-body">
+            <ul data-bind="foreach: availableColors">
+                <li class="checkbox" data-bind="active: { state: $root.colorTypes, value: id }">
+                    <i class="checkbox-icon"></i>
+                    <label data-bind="text: name"></label>
+                </li>
+            </ul>
         </div>
     </div>
-    <div class="breed-type">
-        <div class="header js-accordion">Порода</div>
-        <div class="search js-item">
-            <input type="text" placeholder="Поиск..." />
-            <i class="search-icon">S</i>
-        </div>
-        <div class="options js-item">
-            @{
-                foreach (var breed in new List<string> { "порода 1", "порода 2", "порода 3", "порода 4" })
-                {
-            <label class="checkbox">
-                <input type="checkbox" />
-                <i class="checkbox-icon"></i>
-                @(breed)
-            </label>
-                }
-            }
-            <select>
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-            </select>
+
+    <div class="breed-type js-accordion">
+        <div class="header js-header">Порода</div>
+        <div class="js-body">
+            <div class="search">
+                <input type="text" placeholder="Поиск..." />
+                <i class="search-icon">S</i>
+            </div>
+            <div class="options">
+                <ul data-bind="foreach: availableBreeds">
+                    <li class="checkbox" data-bind="active: { state: $root.breedTypes, value: id }">
+                        <i class="checkbox-icon"></i>
+                        <label data-bind="text: name"></label>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="found-time">
-        <div class="header js-accordion">Время обнаружения</div>
-        <div class="options js-item">
+
+    <div class="found-time js-accordion">
+        <div class="header js-header">Время обнаружения</div>
+        <div class="options js-body">
             <input type="date" />
             <input type="date" />
         </div>
     </div>
 
     <div class="additional-options">
-        <label class="checkbox">
-            <input type="checkbox" />
+        <div class="checkbox" data-bind="active: { state: animalStatuses, value: 'dead' }">
             <i class="checkbox-icon"></i>
-            RIP
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" />
+            <label>RIP</label>
+        </div>
+        <div class="checkbox" data-bind="active: { state: animalStatuses, value: 'help' }">
             <i class="checkbox-icon"></i>
-            SOS
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" />
+            <label>SOS</label>
+        </div>
+        <div class="checkbox" data-bind="active: { state: animalStatuses, value: 'housing' }">
             <i class="checkbox-icon"></i>
-            Передержка
-        </label>
+            <label>Передержка</label>
+        </div>
     </div>
 
     <div class="result-count">
-        Найдено: 245 объявлений
+        Найдено: <span data-bind="text: totalResultsCount"></span> объявлений
     </div>
 </div>
 
-<div class="results-container">
-    <div id="animals-list">
-        @for (var i = 0; i < 64; i++)
-        {
-        <div class="animal-preview">
+<div class="results-container" data-bind="css: { loading: isResultsLoading }">
+    <div id="animals-list" data-bind="foreach: searchResults">
+        <div class="animal-preview" data-bind="css: style">
             <a href="#">
-                <img src="~/Content/samples/dog-@(i % 24 + 1).png" />
+                <div class="foreground" data-bind="text: text"></div>
+                <img data-bind="attr: { src: imgUrl }" />
             </a>
         </div>
-        }
     </div>
 
     <div id="search-map">
