1) cтраница добавления рабочая, данные отправляются в контроллер в виде RequestModel 2) Enums шарятся с джаваскриптом через T4 генерацию + добавил новых 3) настроил IntelliSense _references.js для javascript + файл conventions для Web
в планах:
1) календарь, дропдауны, поиск сделать (возможно через ko.component)
2) немножко подпилить внешний вид страницы добавления
3) отрефакторить add-list.js

потом когда-нибудь:
1) разобраться с загрузкой файлов (нужно обсудить блобы)

--- a/WebSite/Web/Styles/shared/_layout.less
+++ b/WebSite/Web/Styles/shared/_layout.less
@@ -38,7 +38,7 @@ ul, li {
             border-color: lighten(@color, 10%);
             color: lighten(@color, 25%);
         }
-        &.active {
+        &.active, &.js-active {
             color: black;
             background-color: @color;
         }
