убрал кривые референсы из Contracts, убрал Swagger из Web

--- a/WebSite/Web/Views/Shared/_Layout.cshtml
+++ b/WebSite/Web/Views/Shared/_Layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Сайт поиска животных или типа того" />
     <title>@ViewBag.Title - Дай лапу</title>
     @*<link href="~/Styles/lib/normalize.css" rel="stylesheet" type="text/css" />*@
-    <link href="~/Styles/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" /> <!--выпилить нахуй-->
+    <link href="~/Styles/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" /> <!-- todo: выпилить нахуй -->
     <link href="~/Styles/shared/_layout.css" rel="stylesheet" type="text/css" />
     @RenderSection("Styles", false)
 </head>
